[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/Mod.tres" type="Theme" id=1]
[ext_resource path="res://scenes/components/TextBubbleButtons.gd" type="Script" id=2]
[ext_resource path="res://images/white.png" type="Texture" id=3]
[ext_resource path="res://shaders/blur.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/amount = 5.0

[node name="ModernTextBubbleButtons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -91.0
custom_constants/margin_left = 500
custom_constants/margin_bottom = 60

[node name="Container" type="HBoxContainer" parent="Margin"]
margin_left = 500.0
margin_right = 1920.0
margin_bottom = 36.0
mouse_filter = 0
custom_constants/separation = 32

[node name="Menu" type="Button" parent="Margin/Container"]
margin_right = 235.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "TR:MENU:MENU"

[node name="Option" type="Button" parent="Margin/Container"]
visible = false
margin_right = 261.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "TR:MENU:OPTION"

[node name="ToHome" type="Button" parent="Margin/Container"]
visible = false
margin_right = 237.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "TR:MENU:HOME"

[node name="Exit" type="Button" parent="Margin/Container"]
visible = false
margin_right = 211.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "TR:MENU:EXIT"

[node name="BlurBG" type="TextureRect" parent="."]
visible = false
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true

[connection signal="pressed" from="Margin/Container/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Margin/Container/Option" to="." method="_on_Option_pressed"]
